--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Quote Generator</title>
 </head>
+
+
 <body>
 <div class="container">
+    <div class="quote-box">
     <p id="quote">Quotes</p>
+    <small id="author">Author</small>
 </div>
+<button id="btn">Shuffle</button>
+</div>
+
+<script src="app.js"></script>
 </body>
 </html>
